Fix style bug: extra space before If / Else "add elements here..." button

--- a/js/author/templates/elements/a2j-template/a2j-template.less
+++ b/js/author/templates/elements/a2j-template/a2j-template.less
@@ -9,6 +9,10 @@ a2j-template {
     padding-bottom: 40px;
   }
 
+  a2j-template & > ul {
+    padding: 0;
+  }
+
   .drag-placeholder {
     border: 1px dashed darken(@gray-lighter, 20%);
     background-color: lighten(@gray-lighter, 10%) !important;
